# garbage-collector

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c.yml
examples/: CMakeLists.txt  barrier_demo.c  debug.md  generational_demo.c  stack_scan_demo.c  visualizer_demo.c
include/: gc_barrier.h  gc_cardtable.h  gc_debug.h  gc_generation.h  gc_large.h  gc_mark.h  gc_platform.h  gc_pool.h  gc_sweep.h  gc_trace.h  gc_types.h  gc_visualizer.h  simple_gc.h
src/: gc_barrier.c  gc_cardtable.c  gc_debug.c  gc_generation.c  gc_large.c  gc_mark.c  gc_platform.c  gc_pool.c  gc_sweep.c  gc_trace.c  gc_types.c  gc_visualizer.c  simple_gc.c
test/: CMakeLists.txt  test_barrier.c  test_cardtable.c  test_compaction.c  test_debug.c  test_gc_large.c  test_gc_mark.c  test_gc_sweep.c  test_gen_integration.c  test_generational.c  test_memory_pools.c  test_memory_pressure.c  test_simple_gc.c  test_stack_scan.c  test_trace.c  test_visualizer.c
